feat: add additional event types