@@ -9,7 +9,8 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDateTime;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -20,7 +21,7 @@ public class CreateEventServiceTest {
 
     @Test
     @DisplayName("Should create a valid Event from a valid CreateEventPayload")
-    void testCreateEvent() throws MalformedURLException {
+    void testCreateEvent() throws URISyntaxException, MalformedURLException {
         // Given
         CreateEventService createEventService = new CreateEventService();
         CreateEventPayload payload = new CreateEventPayload(
@@ -31,9 +32,9 @@ public class CreateEventServiceTest {
             "Sample Location",
             "123 Sample St, Sample City, SC 12345",
             "Sample Organizer",
-            new URL("https://sampleorganizer.com"),
-            new URL("https://sampleevent.com"),
-            new URL("https://sampleevent.com/image.jpg")
+            new URI("https://sampleorganizer.com").toURL(),
+            new URI("https://sampleevent.com").toURL(),
+            new URI("https://sampleevent.com/image.jpg").toURL()
         );
 
         // When
@@ -41,7 +42,7 @@ public class CreateEventServiceTest {
 
         // Then
         assertNotNull(event);
-        assertEquals(event.eventStatus(), EventStatus.EVENT_SCHEDULED);
+        assertEquals(EventStatus.EVENT_SCHEDULED, event.eventStatus());
     }
 
 
@@ -72,7 +73,7 @@ public class CreateEventServiceTest {
 
     @Test
     @DisplayName("Shall be able to create a congress, session or intervention event")
-    void testCreateCongressEvent() throws MalformedURLException {
+    void testCreateCongressEvent() {
         // Given
         CreateEventService createEventService = new CreateEventService();
         CreateEventPayload payload = new CreateEventPayload(
@@ -83,13 +84,16 @@ public class CreateEventServiceTest {
         Event congress = createEventService.createCongressEvent(payload);
         Event session = createEventService.createSessionEvent(payload);
         Event intervention = createEventService.createInterventionEvent(payload);
+        Event breakEvent = createEventService.createBreakEvent(payload);
 
         // Then
         assertNotNull(congress);
-        assertEquals(congress.getAdditionalType(), EventAdditionalType.CONGRESS);
+        assertEquals(EventAdditionalType.CONGRESS, congress.getAdditionalType());
         assertNotNull(session);
-        assertEquals(session.getAdditionalType(), EventAdditionalType.SESSION);
+        assertEquals(EventAdditionalType.SESSION, session.getAdditionalType());
         assertNotNull(intervention);
-        assertEquals(intervention.getAdditionalType(), EventAdditionalType.INTERVENTION);
+        assertEquals(EventAdditionalType.INTERVENTION, intervention.getAdditionalType());
+        assertNotNull(breakEvent);
+        assertEquals(EventAdditionalType.BREAK, breakEvent.getAdditionalType());
     }
 }
